--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: aliyunoss_plus_flutter
-description: A new Flutter package project.
+description: A new Flutter package project.Upload to the aliyun_oss . It can be a video, a picture, or something else
 version: 1.0.0
 homepage:
 
